--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "swiper": "^10.3.1"
   },
   "devDependencies": {
+    "@eslint/config-array": "^0.19.0",
+    "@eslint/object-schema": "^2.1.4",
     "@types/node": "^20.4.5",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.45.0",
+    "eslint": "^9.15.0",
     "eslint-config-next": "^13.4.12",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
