--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8.4.33",
     "prettier": "^3.2.5",
+    "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
+  },
+  "overrides": {
+    "rimraf": "^5.0.5"
   }
 }
