--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-next": "^14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "lru-cache": "^10.2.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
@@ -37,6 +38,8 @@
     "typescript": "^5.3.3"
   },
   "overrides": {
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "glob": "^10.3.10",
+    "inflight": "npm:lru-cache@^10.2.0"
   }
 }
